--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.profiles.active=development
 spring.config.import=configserver:http://${CONFIG_HOST:localhost}:8888/cloudconfigpropserver/config
 
 encrypt.keyStore.location=classpath:/certs/${spring.application.name}-client-key-${spring.profiles.active}.pfx
-encrypt.keyStore.password=${KEYSTORE_SECRET:s9IYJqLaM8NcI95}
+encrypt.keyStore.password=${KEYSTORE_SECRET:57KCb1TvKq3zJ5P}
 encrypt.keyStore.alias=${spring.application.name}-client-key-${spring.profiles.active}
-encrypt.keyStore.secret=${KEYSTORE_SECRET:s9IYJqLaM8NcI95}
+encrypt.keyStore.secret=${KEYSTORE_SECRET:57KCb1TvKq3zJ5P}
